# Hello

./: build.gradle  gradle.properties  settings.gradle
MySandHook/: build.gradle  settings.gradle
MySandHook/app/: build.gradle
MySandHook/hookers/: build.gradle
MySandHook/hooklib/: build.gradle
MySandHook/nativehook/: build.gradle
MySandHook/xposedcompat/: build.gradle
MySandHook/xposedcompat_new/: build.gradle
activity_lifecycle/: build.gradle
activity_lifecycle/src/androidTest/java/com/example/activity_lifecycle/: ExampleInstrumentedTest.java
activity_lifecycle/src/main/: AndroidManifest.xml
activity_lifecycle/src/main/cpp/: CMakeLists.txt  native-lib.cpp
activity_lifecycle/src/main/java/com/example/activity_lifecycle/: FirstFragment.java  MainActivity.java  MyService.java  NewActivity.java  Second.java  SecondFragment.java  SingleTopActivity.java  Utils.java
activity_lifecycle/src/main/res/layout/: activity_main.xml  activity_second.xml  activity_single_top.xml
activity_lifecycle/src/main/res/values/: strings.xml
activity_lifecycle/src/test/java/com/example/activity_lifecycle/: ExampleUnitTest.java
app_guard/: build.gradle  proguard-rules.pro
app_guard/src/androidTest/java/com/example/app_guard/: ExampleInstrumentedTest.java
app_guard/src/main/: AndroidManifest.xml
app_guard/src/main/cpp/: lesson.cpp
app_guard/src/main/java/com/example/app_guard/: Book.java  ClassOne.java  ClassThree.java  ClassTwo.java  ClassView.java  MainActivity.java
app_guard/src/main/res/layout/: activity_main.xml
app_guard/src/test/java/com/example/app_guard/: ExampleUnitTest.java
app_lifecycle/: build.gradle
app_lifecycle/src/androidTest/java/com/example/applifecycle/: ExampleInstrumentedTest.java
app_lifecycle/src/main/: AndroidManifest.xml
app_lifecycle/src/main/java/com/example/applifecycle/: MainActivity.java  MyApplication.java  MyApplication1.java  MyClassLoader.java  MyClassLoader1.java
app_lifecycle/src/test/java/com/example/applifecycle/: ExampleUnitTest.java
app_service/: build.gradle
app_service/src/androidTest/java/com/example/app_service/: ExampleInstrumentedTest.java
app_service/src/main/: AndroidManifest.xml
app_service/src/main/aidl/com/example/app_service/: IConnectionService.aidl  IMessageService.aidl  IMyAidlInterface.aidl  IServiceManager.aidl  MessageReceiveListener.aidl
app_service/src/main/java/com/example/app_service/: MainActivity.java  MyReceiver.java  MyService.java  RemoteService.java
app_service/src/main/res/layout/: activity_main.xml
app_service/src/test/java/com/example/app_service/: ExampleUnitTest.java
appservice/src/androidTest/java/com/example/appservice/: ExampleInstrumentedTest.java
appservice/src/main/: AndroidManifest.xml
appservice/src/main/aidl/com/example/appservice/: IMyAidlInterface.aidl
appservice/src/main/java/com/example/appservice/: MainActivity.java  (+2 more)
evil/: build.gradle  proguard-rules.pro
evil/src/main/: AndroidManifest.xml
evil/src/main/cpp/: CMakeLists.txt  LogUtils.cpp  LogUtils.h  anti.cpp
evil/src/main/res/layout/: activity_main.xml
evil/src/main/res/values/: strings.xml
frida-demo1/: build.gradle
frida-demo1/src/main/: AndroidManifest.xml
frida-demo1/src/main/res/values/: strings.xml
frida-demo2/: build.gradle
frida-demo2/src/main/: AndroidManifest.xml
frida-demo2/src/main/res/layout/: activity_main.xml
frida-demo2/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
hellonative/: build.gradle
hellonative/src/main/: AndroidManifest.xml
hellonative/src/main/cpp/: CMakeLists.txt  MyTest.cpp  libdynamic.cpp  libstatic.cpp
hellonative/src/main/cpp/base/: FileUtils.h
hellonative/src/main/cpp/include/: substrate.h
hellonative/src/main/cpp/inlineHook/: inlineHook.c  inlineHook.h  relocate.c
hellonative/src/main/cpp/people/: People.h
hellonative/src/main/res/layout/: activity_main.xml
httpnet/: build.gradle
httpnet/src/main/: AndroidManifest.xml
httpnet/src/main/java/Http/: HttpUtils.java  SimpleOkHttp.java
httpnet/src/main/java/Json/: Course.java  CourseInfo.java  CourseTime.java  JsonOpts.java  TimeUnit.java
httpnet/src/main/res/layout/: activity_main.xml
httpnet/src/main/res/values/: strings.xml
httpso/: build.gradle
httpso/src/main/: AndroidManifest.xml
httpso/src/main/res/layout/: activity_main.xml
httpso/src/main/res/values/: strings.xml
jni/: build.gradle
jni/src/main/: AndroidManifest.xml
jni/src/main/cpp/: CMakeLists.txt  MyTest.h  libjni.cpp
jni/src/main/cpp/base/: FileUtils.cpp  jvm.h
jni/src/main/cpp/people/: People.cpp
jni/src/main/res/layout/: activity_main.xml
okhttp1/: build.gradle
okhttp1/src/main/: AndroidManifest.xml
okhttp1/src/main/res/layout/: activity_main.xml
okhttp1/src/main/res/values/: strings.xml
permissions/: build.gradle
permissions/src/main/: AndroidManifest.xml
permissions/src/main/cpp/: native-lib.cpp
permissions/src/main/res/layout/: activity_danger.xml  activity_main.xml  activity_no_perm.xml  activity_perm.xml
permtestclient/: build.gradle
permtestclient/src/main/: AndroidManifest.xml
permtestclient/src/main/res/layout/: activity_main.xml
permtestclient/src/main/res/values/: strings.xml
proguard/src/main/: AndroidManifest.xml
proguard/src/main/cpp/: CMakeLists.txt  lesson.cpp
proxyapp/: build.gradle
proxyapp/src/main/: AndroidManifest.xml
proxyapp/src/main/res/layout/: activity_proxy.xml
proxyapp/src/main/res/values/: strings.xml
retrofit/: build.gradle
retrofit/src/main/: AndroidManifest.xml
retrofit/src/main/res/layout/: activity_main.xml
simplest/: build.gradle
simplest/src/main/: AndroidManifest.xml
simplest/src/main/res/layout/: activity_main.xml
simplest/src/main/res/values/: strings.xml
xpmodules/: build.gradle
xpmodules/src/main/: AndroidManifest.xml
xpmodules/src/main/assets/: xposed_init
xpmodules/src/main/cpp/: CMakeLists.txt  native-hooks.cpp
xpmodules/src/main/cpp/base/: jvm.cpp  jvm.h
xpmodules/src/main/res/layout/: activity_main.xml
xpmodules/src/main/res/values/: strings.xml
(+91 files in other folders)
